feat(proto): add system service filtering control to gRPC reflection and wss status code for frontend
